syntax="proto3";

package srv.tenant;

message TenantUser {
    // @inject_tag: gorm:"primary_key"
    int32 id=1;
    // @inject_tag: gorm:"type:int(11);not null;comment:'租户id'"
    int32 tenant_id=2;
    // @inject_tag: gorm:"type:int(11);not null;comment:'用户id'"
    int32 user_id=3;
    // @inject_tag: gorm:"type:datetime;default:null"
    string created_at=4;
    // @inject_tag: gorm:"type:datetime;default:null"
    string updated_at=6;
}